--- a/src/components/swust-cesuim-map/swust-cesuim-map.component.html
+++ b/src/components/swust-cesuim-map/swust-cesuim-map.component.html
@@ -1,2 +1,6 @@
 <div id="cesiumContainer"></div>
-<div id="toolbar"></div>
+<div class="toolbar">
+    <button class="cesium-button cesium-button-toolbar" (click)="flyToSwust()">
+        Fly To SWUST
+    </button>
+</div>
