--- a/src/pages/Index/index.component.html
+++ b/src/pages/Index/index.component.html
@@ -1,1 +1,4 @@
-<app-swust-cesium></app-swust-cesium>
+<div class="flex-containner">
+    <app-swust-cesium></app-swust-cesium>
+    <app-right-panel></app-right-panel>
+</div>
