--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
+@import "~@progress/kendo-theme-default/scss/all";
+
 /* You can add global styles to this file, and also import other style files */
-html, body, app-swust-cesium, #cesiumContainer {
+html, body, app-index {
     width: 100%;
     height: 100%;
     margin: 0;
