--- a/src/components/swust-cesuim-map/swust-cesuim-map.component.html
+++ b/src/components/swust-cesuim-map/swust-cesuim-map.component.html
@@ -9,3 +9,8 @@
         </button>
     </div>
 </div>
+
+<app-plume-dialog></app-plume-dialog>
+<app-pool-fire-dialog></app-pool-fire-dialog>
+<app-puff-dialog></app-puff-dialog>
+<app-steam-cloud-dialog></app-steam-cloud-dialog>
