--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,22 @@
-@import "~@progress/kendo-theme-default/scss/all";
+@import '~@progress/kendo-theme-bootstrap/scss/all';
 
 /* You can add global styles to this file, and also import other style files */
-html, body, app-index {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+html,
+body,
+app-index {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.row {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.col-form-label {
+  text-align: right;
+  padding-right: 0.5rem;
 }
