modified disaster model

--- a/src/components/plume-dialog/plume-dialog.component.html
+++ b/src/components/plume-dialog/plume-dialog.component.html
@@ -45,7 +45,7 @@
                            [min]='0'
                            formControlName='concentration' />
                     <div class="input-group-append">
-                        <span class="input-group-text">m/s</span>
+                        <span class="input-group-text">mg/m^2</span>
                     </div>
                 </div>
 
