add flight controller

--- a/src/components/puff-dialogs/puff-dialog.component.html
+++ b/src/components/puff-dialogs/puff-dialog.component.html
@@ -28,7 +28,7 @@
                            [min]='0'
                            formControlName='sourceIntensity' />
                     <div class="input-group-append">
-                        <span class="input-group-text">m/s</span>
+                        <span class="input-group-text">mg</span>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                            [min]='0'
                            formControlName='concentration' />
                     <div class="input-group-append">
-                        <span class="input-group-text">m/s</span>
+                        <span class="input-group-text">mg/m^3</span>
                     </div>
                 </div>
 
@@ -74,7 +74,7 @@
                            [min]='0'
                            formControlName='time' />
                     <div class="input-group-append">
-                        <span class="input-group-text">m/s</span>
+                        <span class="input-group-text">s</span>
                     </div>
                 </div>
             </div>
