--- a/src/components/steam-cloud-dialog/steam-cloud-dialog.component.html
+++ b/src/components/steam-cloud-dialog/steam-cloud-dialog.component.html
@@ -11,6 +11,9 @@
                            placeholder="燃料燃烧热"
                            [min]='0'
                            formControlName='heatOfCombustion' />
+                           <div class="input-group-append">
+                            <span class="input-group-text">j/Kg</span>
+                        </div>
 
                 </div>
                 <label class="col-2 col-form-label">燃料质量</label>
@@ -20,6 +23,9 @@
                            placeholder="燃料质量"
                            [min]='0'
                            formControlName='quality' />
+                           <div class="input-group-append">
+                            <span class="input-group-text">Kg</span>
+                        </div>
                 </div>
             </div>
         </form>
