--- a/src/components/swust-cesuim-map/swust-cesuim-map.component.html
+++ b/src/components/swust-cesuim-map/swust-cesuim-map.component.html
@@ -1,12 +1,16 @@
 <div class="map-container">
     <div id="cesiumContainer"></div>
     <div class="toolbar">
-        <button class="cesium-button cesium-button-toolbar" (click)="flyToSwust()">
-            SWUST
+        <button class="cesium-button cesium-button-toolbar"
+                (click)="flyToSwust()">
+            Home
         </button>
-        <button class="cesium-button cesium-button-toolbar" (click)="switchModelDisplayState()">
+        <button class="cesium-button cesium-button-toolbar"
+                (click)="switchModelDisplayState()">
             {{ modelDisplayOperation }}
         </button>
+        <div id='baseLayerSelector'>
+        </div>
     </div>
 </div>
 
