--- a/src/components/swust-cesuim-map/swust-cesuim-map.component.scss
+++ b/src/components/swust-cesuim-map/swust-cesuim-map.component.scss
@@ -1,14 +1,18 @@
 .map-container {
-    position: relative;
-    height: 100%;
+  position: relative;
+  height: 100%;
 }
 
 #cesiumContainer {
-    height: 100%;
+  height: 100%;
 }
 
 .toolbar {
-    position: absolute;
-    top: 5px;
-    right: 12px;
+  position: absolute;
+  top: 5px;
+  right: 12px;
+}
+
+.toolbar > div {
+    display: inline;
 }
