modify some details

--- a/src/components/plume-dialog/plume-dialog.component.html
+++ b/src/components/plume-dialog/plume-dialog.component.html
@@ -28,7 +28,7 @@
                            [min]='0'
                            formControlName='sourceIntensity' />
                     <div class="input-group-append">
-                        <span class="input-group-text">m/s</span>
+                        <span class="input-group-text">mg/s</span>
                     </div>
                 </div>
             </div>
