--- a/src/components/steam-cloud-dialog/steam-cloud-dialog.component.html
+++ b/src/components/steam-cloud-dialog/steam-cloud-dialog.component.html
@@ -1,4 +1,4 @@
-<kendo-dialog title='请提供池火灾模型的参数'
+<kendo-dialog title='请提供蒸汽云模型的参数'
               *ngIf='opened'
               (close)='close()'>
     <div class="container">
