--- a/src/components/swust-cesuim-map/swust-cesuim-map.component.html
+++ b/src/components/swust-cesuim-map/swust-cesuim-map.component.html
@@ -7,7 +7,7 @@
         </button>
         <button class="cesium-button cesium-button-toolbar"
                 (click)="switchModelDisplayState()">
-            {{ modelDisplayOperation }}
+            {{ modelDisplayButtonText }}
         </button>
         <div id='baseLayerSelector'>
         </div>
